<resources>
    <string name="app_name">ICMP Ping</string>
    <string name="config_name">ICMP Ping Configuration</string>
    <string name="about_name">About ICMP Ping</string>
    <string name="permission_explanation">If you wish to export data to SD  card you must grant access to the file system.</string>
    <string name="permission_proceed">PROCEED</string>
    <string name="permission_cancel">CANCEL</string>
    <string name="settings">Settings</string>
    <string name="options">Options</string>
    <string name="address_format">Ping Address Format</string>
    <string name="ipAddress1">IP Example</string>
    <string name="ipAddress2">9.9.9.9\n192.168.2.1</string>
    <string name="urlAddress1">URL Example </string>
    <string name="urlAddress2">www.google.com\ngoogle.com</string>
    <string name="feedback">ICMP Ping - Feedback</string>
    <string name="deadline_description">Specify a timeout, in seconds, before ping will exit regardless of how many packets have been sent or received.</string>
    <string name="timeout_description">Time to wait for a response of single ping, in seconds.</string>
    <string name="count_description">Defines amount of packet sent.</string>
    <string name="size_description">The number of data bytes to be sent. The default is 56, which translates into 64 ICMP data bytes when combined with the 8 bytes of ICMP header data.</string>
    <string name="interval_description">Set an interval of wait seconds between sending each packet. default=1 second. The fastest interval is 0.2 seconds.</string>
    <string name="ttl_description">Value of an IP packet represents the maximum number of IP routers that the packet can go through before being thrown away..</string>
    <string name="route_description">Record route(IPv4 only). Includes the RECORD_ROUTE option in the ECHO_REQUEST packet and displays the route buffer on returned packets. Note that the IP header is only large enough for nine such routes. Many hosts ignore or discard this option. NOT ALL ROUTERS SUPPORT THIS OPTION.</string>
    <string name="timestamp_description">Set special IP timestamp options \'tsandaddr\' (timestamps and addresses). NOT ALL ROUTERS SUPPORT THIS OPTION.</string>
    <string name="about_app">Application access system ping with several configuration options. Ping functionality is similar to Unix.\n\nDeveloped by pacmac 2020.</string>
    <string name="ping_count">Count</string>
    <string name="packet_size">Packet Size</string>
    <string name="ping_interval">Interval</string>
    <string name="time_to_live">Time To Live</string>
    <string name="ping_deadline">Deadline</string>
    <string name="ping_timeout">Timeout</string>
    <string name="use_ipv6_ping">Use IPv6 Ping</string>
    <string name="route_option">Record Route Option</string>
    <string name="timestamp_addresses">Timestamps and Addresses</string>
    <string name="enter_ip_or_url_address">Enter IP or URL address</string>
    <string name="ping">Ping</string>
    <string name="version">Version:</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="incorrect_address">Incorrect Address</string>
    <string name="incorrect_address2">Use host name or full IPv6 address.</string>
    <string name="cancel">CANCEL</string>
    <string name="share">Share</string>
    <string name="export_file">Export File</string>
    <string name="permission_rationale_title">Permission Required</string>
    <string name="exported_to">Exported to /sdcard/ICMP Ping/ping_</string>
    <string name="exported_failed">Ping log not exported due to ERROR.</string>
    <string name="exported_permitted">Export to SD enabled.</string>

</resources>
